# openhcs

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: integration-tests.yml  publish.yml
docs/: skeletonize_and_save.md
docs/papers/graph_infra/: .gitignore  AGENT_PROMPT.md  DependencyGraph.lean  HANDLE_STANDARDS.md  TRUE_PATH_ARCHITECTURE.md  build.js  compare_graphs.py  dependency-graph.jsx  dependency_analyzer.py  fix_ph_handles.py  index.html  rejection-trace.jsx  test_react.html  viewer.js
docs/papers/graph_infra/graphs/: dependency-graph.jsx  true_path.js  viewer.html
docs/papers/insights/: temporal_counting_gap_cosmological_inflation.md
docs/papers/paper1_typing_discipline/latex/: main.aux  main.bbl  main.blg
docs/papers/paper1_typing_discipline/latex_jsait/: build_submission_hook.tex  type_compression_jsait.aux  type_compression_jsait.blg  type_compression_jsait.out  type_compression_jsait_submission.aux  type_compression_jsait_submission.blg  type_compression_jsait_submission.out
docs/papers/paper1_typing_discipline/markdown/: paper1.md  paper1_jsait.md
docs/papers/paper1_typing_discipline/proofs/: AbstractClassSystem.lean  GraphExport.lean  HandleAliases.lean  abstract_class_system.lean  lakefile.lean
docs/papers/paper1_typing_discipline/releases/: arxiv_abstract_paper1.md  arxiv_abstract_paper1_jsait.md  arxiv_abstract_paper1_typing_discipline.md  paper1.md  paper1_copy_paste.txt  paper1_jsait.md  paper1_jsait_copy_paste.txt
docs/papers/paper2_ssot/latex/: main.aux  main.blg  references.bib
docs/papers/paper2_ssot/latex_it/: coherence_it.aux  coherence_it.bbl  coherence_it.blg  preamble.tex  (+6 more)
docs/papers/paper5_credibility/: lean_gap_analysis.md  plan_rigorization.md
docs/papers/proofs/: axis_framework.lean  paper1_axis_framework.lean
docs/plans/: zmq-progress-reporting-plan.md
docs/source/architecture/: abstract_manager_widget.rst  batch_workflow_service.rst  compilation_service.rst  compilation_system_detailed.rst  declarative_window_system.rst  dynamic_dataclass_factory.rst  external_integrations_overview.rst  fiji_streaming_system.rst  index.rst  napari_streaming_system.rst  pattern_detection_system.rst  pattern_grouping_and_special_outputs.rst  pipeline_compilation_system.rst  plate_manager_services.rst  progress_runtime_projection_system.rst  roi_system.rst  scope_window_factory_system.rst  service_registry_integration.rst  special_io_system.rst  storage_and_memory_system.rst  streaming_boundary_and_wrappers.rst  zmq_execution_service_extracted.rst  zmq_server_browser_system.rst
docs/source/concepts/: component_system_concepts.rst  function_patterns.rst
docs/source/development/: compact_window_patterns.rst  index.rst  respecting_codebase_architecture.rst  window_manager_usage.rst
docs/source/guide_for_biologists/: configuration_reference.rst
docs/source/guides/: pipeline_compilation_workflow.rst
docs/source/user_guide/: llm_pipeline_generation.rst
hooks/: post-checkout  post-merge
omero_openhcs/: INSTALL.md  README.md
openhcs/: __init__.py
openhcs/core/: config.py  metadata_cache.py  streaming_config_factory.py
openhcs/core/components/: validation.py
openhcs/core/context/: processing_context.py
openhcs/core/orchestrator/: orchestrator.py
openhcs/core/pipeline/: compiler.py  funcstep_contract_validator.py  function_contracts.py  path_planner.py
openhcs/core/progress/: __init__.py  emitters.py  exceptions.py  projection.py  registry.py  types.py
openhcs/core/steps/: function_step.py
openhcs/microscopes/: openhcs.py
openhcs/processing/custom_functions/: templates.py
openhcs/processing/materialization/: __init__.py  constants.py  core.py  options.py  presets.py  utils.py
openhcs/pyqt_gui/: __init__.py  app.py  config.py  launch.py  main.py
openhcs/pyqt_gui/dialogs/: custom_function_manager_dialog.py  function_selector_dialog.py  metadata_viewer_dialog.py
openhcs/pyqt_gui/services/: llm_pipeline_service.py  reactor_providers.py  service_adapter.py  time_travel_navigation.py  window_config.py  window_handlers.py
openhcs/pyqt_gui/widgets/: image_browser.py  pipeline_editor.py  plate_manager.py  step_parameter_editor.py
openhcs/pyqt_gui/windows/: __init__.py  config_window.py  dual_editor_window.py  help_windows.py  managed_windows.py  plate_viewer_window.py  snapshot_browser_window.py  synthetic_plate_generator_window.py
openhcs/runtime/: fiji_stream_visualizer.py  fiji_viewer_server.py  napari_stream_visualizer.py  napari_viewer_server.py  zmq_execution_client.py  zmq_execution_server.py  zmq_execution_server_launcher.py
openhcs/serialization/: pycodify_formatters.py
openhcs/tests/: test_pipeline.py
openhcs/textual_tui/widgets/: plate_manager.py
openhcs/textual_tui/windows/: function_selector_window.py
openhcs/ui/shared/: streaming_service.py
openhcs/utils/: performance_monitor.py
scripts/: BUILD_PAPERS_USAGE.md  analyze_forcing_coverage.py  build_papers.py  papers.yaml
scripts/figures/: README.md  generate_automated_plots.py  generate_figure_mosaics.py  generate_figure_overlays.py  generate_xy_xz_composite_figures.py
scripts/figures/orthogonal_projections/: __init__.py  cli.py  composer.py  constants.py  discovery.py  io_handler.py  labeling.py  mosaic.py
scripts/napari-plugins/: README.md  napari_orthogonal_projections.py
tests/integration/: test_main.py
tests/unit/: test_batch_submit_wait_engine.py  test_execution_status_poller.py  test_materialization_core.py
tests/unit/progress/: test_projection.py  test_registry_channel_keying.py
tests/unit/pyqt_gui/: test_batch_workflow_compile_engine.py  test_execution_server_status_presenter.py  test_execution_server_summary.py  test_interval_snapshot_poller.py  test_main_config_propagation.py  test_plate_status_presenter.py  test_progress_topology_state.py  test_progress_tree_aggregation.py  test_server_kill_service.py  test_server_row_presenter.py  test_server_tree_population.py  test_tree_rebuild_coordinator.py  test_tree_state_adapter.py  test_zmq_server_info_parser.py
(+921 files in other folders)
